# vs-write

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: EXTENSION_SETTINGS_UI_TEST.md  extension-development.md  extension-manifest-validation.md  extension-signing.md  getting-started-contributors.md
docs/archive/: AGENT_SECURITY_PLAN.md  ARCHITECTURE.md  AUDIT.md  CHANGES_SUMMARY.md  CODEX_WORKLOG.md  EXTENSIONS_SUMMARY.md  EXTENSION_AUDIT.md  EXTENSION_SETTINGS_IMPLEMENTATION.md  EXTENSION_STATUS_UPDATE.md  TEST_SUMMARY.md  VALIDATION_IMPLEMENTATION.md  agent-builder-guide.md
examples/entity-glossary/: README.md  manifest.json  tools.py
examples/entity-glossary-lua/: README.md  manifest.json  tools.lua
examples/entity-stats/: README.md  manifest.json  tools.py
examples/entity-stats-lua/: tools.lua
examples/hello-extension/: README.md  extension-simple.js  extension.js  extension.ts  hooks.py  (+3 more)
examples/hello-extension-lua/: README.md  hooks.lua  manifest.json
keys/: .gitignore  vswrite-official.pub
marketplace/: README.md
scripts/: generate-keypair.cjs  package-extensions.cjs  sign-extension.cjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_commands.rs  extensions.rs  lib.rs
src-tauri/src/agent/: core.rs  credentials.rs  doctor.rs  entity_api.rs  llm.rs  lua_extensions.rs  lua_runtime.rs  mod.rs  session.rs  tools.rs  types.rs
(+82 files in other folders)
