[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.0.3"
tauri-plugin-fs = { version = "2.0.3", features = ["watch"] }
tauri-plugin-dialog = "2.0.3"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
open = "5.3.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
zip = "0.6"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"
glob = "0.3"
uuid = { version = "1.0", features = ["v4"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.0"
